// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Installer matches snapshot 1`] = `
"<div data-v-d255ffee="" class="ipl-space color-secondary layout vertical">
  <div>Installation folder: /install/path</div>
  <status-row-stub color="gray" class="m-t-8"></status-row-stub>
  <div class="layout horizontal m-t-8">
    <ipl-button-stub label="Select folder" color="blue" disabled="false" async="false" progressmessage="Working..." successmessage="Done!" requiresconfirmation="false" shortconfirmationmessage="false" small="false" disableonsuccess="false" inline="false" data-test="install-directory-select-button"></ipl-button-stub>
    <ipl-button-stub label="Install" color="green" disabled="true" async="false" progressmessage="Working..." successmessage="Done!" requiresconfirmation="false" shortconfirmationmessage="false" small="false" disableonsuccess="false" inline="false" data-test="install-button" class="m-l-8"></ipl-button-stub>
    <ipl-button-stub label="Open dashboard" color="green" disabled="true" async="false" progressmessage="Working..." successmessage="Done!" requiresconfirmation="false" shortconfirmationmessage="false" small="false" disableonsuccess="false" inline="false" data-test="open-dashboard-button" class="m-l-8"></ipl-button-stub>
  </div>
</div>
<div data-v-a1f8a641="" class="ipl-expanding-space color-secondary m-t-8" data-test="nodecg-log-space" style="display: none;">
  <div data-v-a1f8a641="" class="ipl-expanding-space__header">
    <div data-v-a1f8a641="" class="ipl-expanding-space__header-background" tabindex="0"></div>
    <div data-v-a1f8a641="" class="ipl-expanding-space__title"> NodeCG log <span class="badge badge-red">Stopped</span></div>
    <font-awesome-icon-stub data-v-a1f8a641="" icon="[object Object]" border="false" fixedwidth="false" flip="false" listitem="false" pulse="false" swapopacity="false" spin="false" symbol="false" inverse="false" bounce="false" shake="false" beat="false" fade="false" beatfade="false" flash="false" spinpulse="false" spinreverse="false" class="icon content-expanded"></font-awesome-icon-stub>
    <div data-v-a1f8a641="" class="header-extra"></div>
  </div>
  <div data-v-a1f8a641="" class="content">
    <div class="layout vertical center-horizontal">
      <log-display-stub logkey="run-nodecg" class="m-t-4"></log-display-stub>
    </div>
  </div>
</div>
<log-overlay-stub title="Installing..." logkey="install-nodecg" visible="false"></log-overlay-stub>"
`;

exports[`Installer matches snapshot when nodecg status is NOT_STARTED 1`] = `
"<div data-v-d255ffee="" class="ipl-space color-secondary layout vertical">
  <div>Installation folder: </div>
  <status-row-stub color="gray" class="m-t-8"></status-row-stub>
  <div class="layout horizontal m-t-8">
    <ipl-button-stub label="Select folder" color="blue" disabled="false" async="false" progressmessage="Working..." successmessage="Done!" requiresconfirmation="false" shortconfirmationmessage="false" small="false" disableonsuccess="false" inline="false" data-test="install-directory-select-button"></ipl-button-stub>
    <ipl-button-stub label="Install" color="green" disabled="true" async="false" progressmessage="Working..." successmessage="Done!" requiresconfirmation="false" shortconfirmationmessage="false" small="false" disableonsuccess="false" inline="false" data-test="install-button" class="m-l-8"></ipl-button-stub>
    <ipl-button-stub label="Open dashboard" color="green" disabled="true" async="false" progressmessage="Working..." successmessage="Done!" requiresconfirmation="false" shortconfirmationmessage="false" small="false" disableonsuccess="false" inline="false" data-test="open-dashboard-button" class="m-l-8"></ipl-button-stub>
  </div>
</div>
<div data-v-a1f8a641="" class="ipl-expanding-space color-secondary m-t-8" data-test="nodecg-log-space" style="display: none;">
  <div data-v-a1f8a641="" class="ipl-expanding-space__header">
    <div data-v-a1f8a641="" class="ipl-expanding-space__header-background" tabindex="0"></div>
    <div data-v-a1f8a641="" class="ipl-expanding-space__title"> NodeCG log <span class="badge badge-red">Stopped</span></div>
    <font-awesome-icon-stub data-v-a1f8a641="" icon="[object Object]" border="false" fixedwidth="false" flip="false" listitem="false" pulse="false" swapopacity="false" spin="false" symbol="false" inverse="false" bounce="false" shake="false" beat="false" fade="false" beatfade="false" flash="false" spinpulse="false" spinreverse="false" class="icon content-expanded"></font-awesome-icon-stub>
    <div data-v-a1f8a641="" class="header-extra"></div>
  </div>
  <div data-v-a1f8a641="" class="content">
    <div class="layout vertical center-horizontal">
      <log-display-stub logkey="run-nodecg" class="m-t-4"></log-display-stub>
    </div>
  </div>
</div>
<log-overlay-stub title="Installing..." logkey="install-nodecg" visible="false"></log-overlay-stub>"
`;

exports[`Installer matches snapshot when nodecg status is RUNNING 1`] = `
"<div data-v-d255ffee="" class="ipl-space color-secondary layout vertical">
  <div>Installation folder: </div>
  <status-row-stub color="gray" class="m-t-8"></status-row-stub>
  <div class="layout horizontal m-t-8">
    <ipl-button-stub label="Select folder" color="blue" disabled="false" async="false" progressmessage="Working..." successmessage="Done!" requiresconfirmation="false" shortconfirmationmessage="false" small="false" disableonsuccess="false" inline="false" data-test="install-directory-select-button"></ipl-button-stub>
    <ipl-button-stub label="Install" color="green" disabled="true" async="false" progressmessage="Working..." successmessage="Done!" requiresconfirmation="false" shortconfirmationmessage="false" small="false" disableonsuccess="false" inline="false" data-test="install-button" class="m-l-8"></ipl-button-stub>
    <ipl-button-stub label="Open dashboard" color="green" disabled="false" async="false" progressmessage="Working..." successmessage="Done!" requiresconfirmation="false" shortconfirmationmessage="false" small="false" disableonsuccess="false" inline="false" data-test="open-dashboard-button" class="m-l-8"></ipl-button-stub>
  </div>
</div>
<div data-v-a1f8a641="" class="ipl-expanding-space color-secondary m-t-8" data-test="nodecg-log-space">
  <div data-v-a1f8a641="" class="ipl-expanding-space__header">
    <div data-v-a1f8a641="" class="ipl-expanding-space__header-background" tabindex="0"></div>
    <div data-v-a1f8a641="" class="ipl-expanding-space__title"> NodeCG log <span class="badge badge-green">Running</span></div>
    <font-awesome-icon-stub data-v-a1f8a641="" icon="[object Object]" border="false" fixedwidth="false" flip="false" listitem="false" pulse="false" swapopacity="false" spin="false" symbol="false" inverse="false" bounce="false" shake="false" beat="false" fade="false" beatfade="false" flash="false" spinpulse="false" spinreverse="false" class="icon content-expanded"></font-awesome-icon-stub>
    <div data-v-a1f8a641="" class="header-extra"></div>
  </div>
  <div data-v-a1f8a641="" class="content">
    <div class="layout vertical center-horizontal">
      <log-display-stub logkey="run-nodecg" class="m-t-4"></log-display-stub>
    </div>
  </div>
</div>
<log-overlay-stub title="Installing..." logkey="install-nodecg" visible="false"></log-overlay-stub>"
`;

exports[`Installer matches snapshot when nodecg status is STOPPED 1`] = `
"<div data-v-d255ffee="" class="ipl-space color-secondary layout vertical">
  <div>Installation folder: </div>
  <status-row-stub color="gray" class="m-t-8"></status-row-stub>
  <div class="layout horizontal m-t-8">
    <ipl-button-stub label="Select folder" color="blue" disabled="false" async="false" progressmessage="Working..." successmessage="Done!" requiresconfirmation="false" shortconfirmationmessage="false" small="false" disableonsuccess="false" inline="false" data-test="install-directory-select-button"></ipl-button-stub>
    <ipl-button-stub label="Install" color="green" disabled="true" async="false" progressmessage="Working..." successmessage="Done!" requiresconfirmation="false" shortconfirmationmessage="false" small="false" disableonsuccess="false" inline="false" data-test="install-button" class="m-l-8"></ipl-button-stub>
    <ipl-button-stub label="Open dashboard" color="green" disabled="true" async="false" progressmessage="Working..." successmessage="Done!" requiresconfirmation="false" shortconfirmationmessage="false" small="false" disableonsuccess="false" inline="false" data-test="open-dashboard-button" class="m-l-8"></ipl-button-stub>
  </div>
</div>
<div data-v-a1f8a641="" class="ipl-expanding-space color-secondary m-t-8" data-test="nodecg-log-space">
  <div data-v-a1f8a641="" class="ipl-expanding-space__header">
    <div data-v-a1f8a641="" class="ipl-expanding-space__header-background" tabindex="0"></div>
    <div data-v-a1f8a641="" class="ipl-expanding-space__title"> NodeCG log <span class="badge badge-red">Stopped</span></div>
    <font-awesome-icon-stub data-v-a1f8a641="" icon="[object Object]" border="false" fixedwidth="false" flip="false" listitem="false" pulse="false" swapopacity="false" spin="false" symbol="false" inverse="false" bounce="false" shake="false" beat="false" fade="false" beatfade="false" flash="false" spinpulse="false" spinreverse="false" class="icon content-expanded"></font-awesome-icon-stub>
    <div data-v-a1f8a641="" class="header-extra"></div>
  </div>
  <div data-v-a1f8a641="" class="content">
    <div class="layout vertical center-horizontal">
      <log-display-stub logkey="run-nodecg" class="m-t-4"></log-display-stub>
    </div>
  </div>
</div>
<log-overlay-stub title="Installing..." logkey="install-nodecg" visible="false"></log-overlay-stub>"
`;
